--- a/index.html
+++ b/index.html
@@ -3,15 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1366px, height=768px initial-scale=1.0">
     <link rel="stylesheet" href="./test.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <script src="https://kit.fontawesome.com/1f2f29a838.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <section class="header-container">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h1>Main Page</h1>
+        <nav class="nav" id="top-nav">
+            <li>Hello, Edwin</li>
+            <li>New Messages</li>
+            <li>Navigation</li>
+            <li>Quit</li>
+        </nav>
+        </section>
+        <div class="search-bar" action="action_page.php">
+            <input type="text" placeholder="Search.." id="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </div>
+        <hr>
+        <div class="nav-padding">
+            <nav class="nav" id="main-nav">
+                <li>Home</li>
+                <li>Menu Item</li>
+                <li>Menu Item</li>
+                <li>Menu Item</li>
+                <li>Menu Item</li>       
+            </nav>
+        </div>
+        <nav class="subnav-container">
+            <li>Sub Item</li>
+            <li>Business Template</li>
+            <li>Sub Item</li>
+            <li>Sub Item</li>
+        </nav>
+    </header>
+
+
+
+
+    <main>
+        <section class="main-container">
+            <h2>test main</h2>
+        </section>
+    </main>
+
+
+
+
+
+    <footer>
+        <section class="footer-container">
+            <h3>test footer</h3>
+        </section>
+    </footer>
 </body>
   
